--- a/calendar/app/src/main/AndroidManifest.xml
+++ b/calendar/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.CalendarMonthActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:hardwareAccelerated="true"
